# textlesslib

./: pyproject.toml  requirements.txt
textless/checkpoint_manager/: .manager.py.~undo-tree~  manager.py
