[tool.poetry]
name = "textless"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^2.1.2"
pytest = "^7.4.3"
amfm-decompy = "^1.0.11"
librosa = "^0.10.1"
threadpoolctl = "^3.2.0"
joblib = "^1.3.2"
scikit-learn = "^1.3.2"
npy-append-array = "^0.9.16"
unidecode = "^1.3.7"
inflect = "^7.0.0"
torchaudio = "^2.1.2"
fairseq = "^0.12.2"
numpy = "^1.26.2"
numba = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
